--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets": [
-    "@babel/preset-react"
-  ],
-  "plugins": [
-    "react-hot-loader/babel"
-  ]
+  "presets": ["@babel/preset-react"]
 }
